Fix: AuthOverlay / Update HeaderWrapper's height to resolve distortion #36

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -65,7 +65,7 @@ html {
   font-size: 16px;
 }
 
-@media screen and (min-width: 960px) {
+@media screen and (min-width: 1400px) {
   html {
     font-size: 20px;
   }
